Latest code as on 18th May 2019

--- a/src/classes/AssociateParticipantsBatch.cls
+++ b/src/classes/AssociateParticipantsBatch.cls
@@ -8,33 +8,35 @@ public class AssociateParticipantsBatch implements Database.Batchable<SObject>, 
 	Id sequenceIdToAssociateParticipants;
 	Map<Id, Cadence__c> sequenceIdToSequenceMap;
 	public List<SObject> participantListToUpdate; 
+	private String sequenceRecordType; 
 	
 	public AssociateParticipantsBatch(Id sequenceId) {  
 		sequenceIdToAssociateParticipants = sequenceId;
 		sequenceIdToSequenceMap = SequenceEngineHelper.getActiveSequenceIdToSequenceMapByFieldValue(new Map<String, Set<String>>{'Id' => new Set<String>{sequenceId}});
 		participantListToUpdate = new List<SObject>();
+		sequenceRecordType = sequenceIdToSequenceMap.containsKey(sequenceIdToAssociateParticipants) ? sequenceIdToSequenceMap.get(sequenceIdToAssociateParticipants).Record_Type__c : null;
 	} 
 	
 	public Database.QueryLocator start(Database.BatchableContext bc) {
-		String sequenceRecordType = sequenceIdToSequenceMap.containsKey(sequenceIdToAssociateParticipants) ? sequenceIdToSequenceMap.get(sequenceIdToAssociateParticipants).Record_Type__c : null;
 		String query; 
-		
 		if(!sequenceRecordType.equalsIgnoreCase(CadenceConstants.OPPORTUNITY_OBJECT_NAME))
 			query = SequenceEngineService.formParticipantSelectQuery(sequenceRecordType, sequenceIdToSequenceMap.get(sequenceIdToAssociateParticipants));
 		else{
 			//query = formQueryOpportunity(objName,cadence);
 		}
 		query += ' order by lastmodifieddate';
-		return Database.getQueryLocator(query); // Max available query row limit - 50 million (Record limit)
+		return Database.getQueryLocator(query); // Max available query row limit in single context - 50 million (Records limit)
 	}
   
 	public void execute(Database.BatchableContext bc, List<SObject> participantList) {
 		if(sequenceIdToSequenceMap.containsKey(sequenceIdToAssociateParticipants) && participantList.size() > 0) {
-			AssociateParticipantsBatchService.associateParticipantsToSequence(sequenceIdToAssociateParticipants, sequenceIdToSequenceMap, participantList, participantListToUpdate);
+			AssociateParticipantsBatchService.associateParticipantsToSequence(sequenceIdToAssociateParticipants, sequenceIdToSequenceMap, participantList, participantListToUpdate, sequenceRecordType);
 		}
 	}
 
 	public void finish(Database.BatchableContext bc) {
+		SequenceEngineService.disableParticipantTrigger(sequenceRecordType);
 		Database.update(participantListToUpdate, false);
+		SequenceEngineService.enableParticipantTrigger(); 
 	}
 }
