--- a/src/classes/RuleCriterionMatcherHelper.cls
+++ b/src/classes/RuleCriterionMatcherHelper.cls
@@ -2,14 +2,14 @@ public with sharing class RuleCriterionMatcherHelper {
 
 	public static Map<Id, CriterionSet> getCadenceWiseCriterions(List<Cadence__c> cadences, String criterionType) {
 
-		Map<Id, CriterionSet> cadenceCriterions = new Map<Id, CriterionSet>();
+		Map<Id, CriterionSet> cadenceCriterions = new Map<Id, CriterionSet>();		
 		for(Cadence__c cad : cadences) {
 			CriterionSet csObj;
 			if(criterionType.equalsIgnoreCase(CadenceConstants.CRITERION_TYPE_ENTRY)) {
 				csObj = CriterionSet.parse(cad.Entrance_Criteria__c);
 				csObj.postFixExpression = cad.Entrance_Criteria_PE__c;
 			} else {
-				csObj = CriterionSet.parse(cad.Exit_Criteria__c);
+				csObj = CriterionSet.parse(cad.Exit_Criteria__c); 
 				csObj.postFixExpression = cad.Exit_Criteria_PE__c;
 			}  
 			cadenceCriterions.put(cad.Id, csObj);
@@ -33,8 +33,8 @@ public with sharing class RuleCriterionMatcherHelper {
 		}						
 		return cadActionCriterions;
 	}
-
-	public static Boolean cadenceCriterionMatches(SObject obj, SObject parent, CriterionSet cs) {
+ 
+	public static Boolean cadenceCriterionMatches(SObject obj, SObject parent, CriterionSet cs, RuleCriteriaMatcherDataSets ruleCriteriaMatcherDataSet) {
 
 		Boolean cadCriteriaMatched = false; 
 		FormulaSObjectValue fsv = new FormulaSObjectValue(obj, parent);
@@ -42,7 +42,7 @@ public with sharing class RuleCriterionMatcherHelper {
 			return false; 
 		}
 		if(!cs.executionCriterion.contains(CadenceConstants.EXECUTION_CRITERION_NO_CRITERION)){
-			cadCriteriaMatched = matchEntryCriteria(cs,fsv);
+			cadCriteriaMatched = matchEntryCriteria(cs, fsv, ruleCriteriaMatcherDataSet);
 		}else{
 			cadCriteriaMatched = true;
 		}
@@ -50,33 +50,33 @@ public with sharing class RuleCriterionMatcherHelper {
 	}
 
 
-	public static Boolean matchEntryCriteria(CriterionSet cs, FormulaSObjectValue fsv){
+	public static Boolean matchEntryCriteria(CriterionSet cs, FormulaSObjectValue fsv, RuleCriteriaMatcherDataSets ruleCriteriaMatcherDataSet){
 		Boolean isAllCriteriasMatched = false;
 		if(cs.executionCriterion.contains(CadenceConstants.EXECUTION_CRITERION_NO_CRITERION)){
 			isAllCriteriasMatched = true;
 		}else{
 			String operator = cs.condition.contains('OR')?'OR':'AND';
 			if(cs.condition.contains('Custom')){ 
-				isAllCriteriasMatched = matchCustomLogic(cs.criterions, cs.postFixExpression, fsv);
+				isAllCriteriasMatched = matchCustomLogic(cs.criterions, cs.postFixExpression, fsv, ruleCriteriaMatcherDataSet);
 			}else if(operator.equals('AND')){
-				isAllCriteriasMatched = matchANDOperatorCriterias(cs.criterions.values(), fsv);
+				isAllCriteriasMatched = matchANDOperatorCriterias(cs.criterions.values(), fsv, ruleCriteriaMatcherDataSet);
 
 			}else if(operator.equals('OR')){
-				isAllCriteriasMatched = matchOROperatorCriterias(cs.criterions.values(), fsv);
+				isAllCriteriasMatched = matchOROperatorCriterias(cs.criterions.values(), fsv, ruleCriteriaMatcherDataSet);
 			}
 		}
 		return isAllCriteriasMatched;
 	}
 
-
-	public static Boolean matchCustomLogic(Map<Integer, Criterion> criteriaMap, String postFixExp, FormulaSObjectValue fsv){
+  
+	public static Boolean matchCustomLogic(Map<Integer, Criterion> criteriaMap, String postFixExp, FormulaSObjectValue fsv, RuleCriteriaMatcherDataSets ruleCriteriaMatcherDataSet){
 		List<String> postFixExpression = (List<String>)System.JSON.deserialize(postFixExp, List<String>.class);
-		return evalutePostfixExpression(criteriaMap, postFixExpression, fsv); 
+		return evalutePostfixExpression(criteriaMap, postFixExpression, fsv, ruleCriteriaMatcherDataSet); 
 	}
 
 
 	public static Boolean evalutePostfixExpression(Map<Integer, Criterion> criteriaMap, List<String> postFixExpression, 
-			FormulaSObjectValue fsv){
+			FormulaSObjectValue fsv, RuleCriteriaMatcherDataSets ruleCriteriaMatcherDataSet){
 
 		Stack stack = new Stack();
 		Boolean result = false;
@@ -87,7 +87,7 @@ public with sharing class RuleCriterionMatcherHelper {
 				if(stack.size()>=2) {
 					Object op1 = stack.pop();
 					Object op2 = stack.pop();
-					Boolean tempResult = calculateExpression(op1, op2, criteriaMap, fsv, s);
+					Boolean tempResult = calculateExpression(op1, op2, criteriaMap, fsv, s, ruleCriteriaMatcherDataSet);
 					stack.push(tempResult);
 				} else {
 					return false;
@@ -107,10 +107,10 @@ public with sharing class RuleCriterionMatcherHelper {
 
 	public static Boolean calculateExpression(Object op1, Object op2, 
 			Map<Integer, Criterion> criteriaMap, 
-			FormulaSObjectValue fsv, String operator){
+			FormulaSObjectValue fsv, String operator, RuleCriteriaMatcherDataSets ruleCriteriaMatcherDataSet){
 		Boolean result = false;
-		Boolean matchResult1 = getCriteriaMatchResult(op1, criteriaMap, fsv);
-		Boolean matchResult2 = getCriteriaMatchResult(op2, criteriaMap, fsv);
+		Boolean matchResult1 = getCriteriaMatchResult(op1, criteriaMap, fsv, ruleCriteriaMatcherDataSet);
+		Boolean matchResult2 = getCriteriaMatchResult(op2, criteriaMap, fsv, ruleCriteriaMatcherDataSet);
 
 		if(operator.equalsIgnoreCase('AND')){
 			result=matchResult1 && matchResult2;
@@ -122,13 +122,13 @@ public with sharing class RuleCriterionMatcherHelper {
 
 
 	public static Boolean getCriteriaMatchResult(Object op, Map<Integer, Criterion> criteriaMap,
-			FormulaSObjectValue fsv){
+			FormulaSObjectValue fsv, RuleCriteriaMatcherDataSets ruleCriteriaMatcherDataSet){
 		Boolean matchResult = false;
 		if(op instanceOf Integer){
 			Criterion c = criteriaMap.get(Integer.valueOf(op));
 
 			if(c.fieldName.equalsIgnoreCase(CadenceConstants.OPPORTUNITY_ROLE_OBJECT_NAME+'.Role')){
-				matchResult = IsCriteriasMatched((String)fsv.getId(),matchResult,c,fsv,'Custom');
+				matchResult = IsCriteriasMatched((String)fsv.getId(),matchResult,c,fsv,'Custom', ruleCriteriaMatcherDataSet);
 			} else if(c.matches(fsv)){
 				matchResult = true;
 			}else {
@@ -141,11 +141,11 @@ public with sharing class RuleCriterionMatcherHelper {
 		return matchResult;												
 	}
 
-	public static Boolean matchANDOperatorCriterias(List<Criterion> criteriaList, FormulaSObjectValue fsv){
+	public static Boolean matchANDOperatorCriterias(List<Criterion> criteriaList, FormulaSObjectValue fsv, RuleCriteriaMatcherDataSets ruleCriteriaMatcherDataSet){
 		Boolean isAllCriteriasMatched = true;
 		for(Criterion c: criteriaList){
 			if(c.fieldName.equalsIgnoreCase(CadenceConstants.OPPORTUNITY_ROLE_OBJECT_NAME+'.Role')){
-				isAllCriteriasMatched = IsCriteriasMatched((String)fsv.getId(),isAllCriteriasMatched,c,fsv,'AND');
+				isAllCriteriasMatched = IsCriteriasMatched((String)fsv.getId(),isAllCriteriasMatched,c,fsv,'AND', ruleCriteriaMatcherDataSet);
 			} else if(c.matches(fsv)){
 				isAllCriteriasMatched = isAllCriteriasMatched && true;
 			} else {
@@ -155,9 +155,26 @@ public with sharing class RuleCriterionMatcherHelper {
 		return isAllCriteriasMatched;
 	}
 
-	public static Boolean IsCriteriasMatched(String oppId,Boolean isAllCriteriasMatched,Criterion c,FormulaSObjectValue fsv,String operator){
+	public static Boolean IsCriteriasMatched(String oppId, Boolean isAllCriteriasMatched, Criterion c, FormulaSObjectValue fsv, String operator, RuleCriteriaMatcherDataSets ruleCriteriaMatcherDataSet){
 		Set<String> listOfRoleMatchContacts = new Set<String>();
-		if(CadenceService.mapOfOppContactRoles.containskey(oppId)){
+		if(((Opportunity)fsv.getCurrent()).getSObjects('OpportunityContactRoles').size() > 0){
+			for(OpportunityContactRole OppContactRole : ((Opportunity)fsv.getCurrent()).getSObjects('OpportunityContactRoles')){
+				if(c.value.equalsIgnoreCase(OppContactRole.Role)){
+					listOfRoleMatchContacts.add(OppContactRole.ContactId);
+				}
+			}
+			ruleCriteriaMatcherDataSet.opportunityIdwithMatchedContactRoleIds.put((String)fsv.getId(),listOfRoleMatchContacts);
+			if(listOfRoleMatchContacts.size() > 0){
+				if(operator == 'AND'){
+					isAllCriteriasMatched = isAllCriteriasMatched && true;
+				}else{
+					isAllCriteriasMatched = true;
+				}
+			} else {
+				isAllCriteriasMatched = false;
+			}
+		}
+		/**if(CadenceService.mapOfOppContactRoles.containskey(oppId)){
 			for(OpportunityContactRole OppContactRole : CadenceService.mapOfOppContactRoles.get(oppId)){
 				if(c.value.equalsIgnoreCase(OppContactRole.Role)){
 					listOfRoleMatchContacts.add(OppContactRole.ContactId);
@@ -173,15 +190,15 @@ public with sharing class RuleCriterionMatcherHelper {
 			} else {
 				isAllCriteriasMatched = false;
 			}
-		}
+		}**/
 		return isAllCriteriasMatched;
 	}
 
-	public static Boolean matchOROperatorCriterias(List<Criterion> criteriaList, FormulaSObjectValue fsv){
+	public static Boolean matchOROperatorCriterias(List<Criterion> criteriaList, FormulaSObjectValue fsv, RuleCriteriaMatcherDataSets ruleCriteriaMatcherDataSet){
 		Boolean isAllCriteriasMatched = false;
 		for(Criterion c: criteriaList){
 			if(c.fieldName.equalsIgnoreCase(CadenceConstants.OPPORTUNITY_ROLE_OBJECT_NAME+'.Role')){
-				isAllCriteriasMatched = IsCriteriasMatched((String)fsv.getId(),isAllCriteriasMatched,c,fsv,'OR');
+				isAllCriteriasMatched = IsCriteriasMatched((String)fsv.getId(),isAllCriteriasMatched,c,fsv,'OR', ruleCriteriaMatcherDataSet);
 			} else if(c.matches(fsv)){
 				isAllCriteriasMatched = true;
 			}
