--- a/src/classes/AssociateParticipantsBatchService.cls
+++ b/src/classes/AssociateParticipantsBatchService.cls
@@ -5,9 +5,9 @@
  * Description: Service class for AssociateParticipantsBatch - It will Associate participants to any sequnce - In case if (total number participants to be associated to sequence > max size)
 **/
 public class AssociateParticipantsBatchService {
-	static Integer MAX_RECORDS_UPDATE_LIMIT = 9999; 
+	static Integer MAX_RECORDS_UPDATE_LIMIT = 9900; 
 	
-    public static void associateParticipantsToSequence(Id sequenceId, Map<Id, Cadence__c> sequenceIdToSequenceMap, List<SObject> participantList, List<SObject> participantListToUpdate) {
+    public static void associateParticipantsToSequence(Id sequenceId, Map<Id, Cadence__c> sequenceIdToSequenceMap, List<SObject> participantList, List<SObject> participantListToUpdate, String sequenceRecordType) {
 		
 		Map<Id, List<CadenceAction__c>> particiapntIdToSequenceActionListMap = new Map<Id, List<CadenceAction__c>>();
 		
@@ -23,8 +23,11 @@ public class AssociateParticipantsBatchService {
 			participantListToUpdate.add(participant);
 		}
 		
-		if(participantListToUpdate !=  null && participantListToUpdate.size() > 9999) {
+		if(participantListToUpdate !=  null && participantListToUpdate.size() < 9900) {
+			SequenceEngineService.disableParticipantTrigger(sequenceRecordType);
 			Database.update(participantListToUpdate, false);
+			SequenceEngineService.enableParticipantTrigger(); 
+			
 			participantListToUpdate = new List<SObject>();
 		} 
 	}
