--- a/src/classes/FormulaSObjectValue.cls
+++ b/src/classes/FormulaSObjectValue.cls
@@ -47,5 +47,10 @@ public with sharing class FormulaSObjectValue {
 			return null;
 		}
 	}
+	
+	public SObject getCurrent()
+	{
+	   return current;
+	}
 
 }
